# badchessengine

./: .gitignore  CMakeLists.txt  README.md  arg.cpp  arg.h  chess.cpp  chess.h  main.cpp  platform.cpp  platform.h  sdl_ui.cpp  sdl_ui.h  shell.cpp  shell.h  util.cpp  util.h
